--- a/index.html
+++ b/index.html
@@ -1230,6 +1230,10 @@
         <source id="bgmSource" src="" type="audio/mp4">
     </audio>
 
+    <audio id="admin-sound" preload="auto">
+        <source src="https://www.myinstants.com/media/sounds/windows-10-exclamation.mp3" type="audio/mpeg">
+    </audio>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 
